test/spec_vectors/simd_f32x4_arith/fail/module_8.wat
(module (func $f32x4.neg-arg-empty (result v128) (f32x4.neg)))